--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "tsc",
+    "prebuild": "rimraf ./build && tsc",
     "build": "node build/app",
     "dev": "nodemon"
   },
@@ -22,7 +22,13 @@
   "devDependencies": {
     "@types/node": "^18.14.0",
     "nodemon": "^2.0.20",
+    "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "web3": "^1.8.2"
   }
 }
