--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "web3": "^1.8.2"
+    "web3": "^1.8.2",
+    "web3-ts": "^0.2.2"
   }
 }
