--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "web3": "^1.8.2",
