--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "prebuild": "rimraf ./build && tsc",
     "build": "node build/app",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "nodemon"
   },
   "repository": {
@@ -21,6 +24,7 @@
   "homepage": "https://github.com/akiselyoff/defi#readme",
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "gh-pages": "^5.0.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
