--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "test task",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app",
-    "prebuild": "rimraf ./build && tsc",
-    "build": "node build/app",
+    "start": "node build/app.js",
+    "build": "npx tsc",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "nodemon"
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/akiselyoff/defi#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/node": "^18.14.0",
     "gh-pages": "^5.0.0",
     "nodemon": "^2.0.20",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^3.14.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
